Another try to fix the white margin on mobile screens

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -121,14 +121,12 @@ body {
 /** ---------------- Orbit -------------------**/
 
 #m-carousel-section {
-  display: block;
   top: 20rem;
   margin-top: 0rem;
   background: #eee;
-  margin-left: 1.67rem;
-  margin-right: 1.67rem;
   overflow-x: clip;
 }
+
 .carousel {
   width: 100%;
   height: 100%;
